[project]
name = "ideation-loop"
version = "0.1.0"
description = "Minimal OpenAI-backed ideation and exploration loop runner"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Bruno Meilick" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "matplotlib>=3.7.0",
    "networkx>=3.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Repository = "https://github.com/bnomei/ideation-loop"
Issues = "https://github.com/bnomei/ideation-loop/issues"

[tool.uv]
package = false
